@@ -1,3 +1,14 @@
+2011-09-01  Hao Zheng  <zhenghao@chromium.org>
+
+        Define PTHREAD_KEYS_MAX to fix Android port build.
+        https://bugs.webkit.org/show_bug.cgi?id=67362
+
+        Reviewed by Adam Barth.
+
+        PTHREAD_KEYS_MAX is not defined in bionic, so explicitly define it.
+
+        * wtf/ThreadIdentifierDataPthreads.cpp:
+
 2011-08-31  Oliver Hunt  <oliver@apple.com>
 
         Fix build.
